--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <container class="principal">
         <div class="principal__header">
-            <img src="/src/FOTO.jpg" class="principal__header__foto">
+            <img src="/src/FOTO.jpg" class="principal__header__foto" alt="Foto sorrindo">
             <h2>Olá, meu nome é Felipe Almeida, entusiasta em técnologia e estudante de Programação</h2>
             <p>Pós graduado em Sistemas de Informação para a Saúde, estudante de tecnologias Front-End como: HTML, CSS,
                 JavasCript e React.</p>
